# pokeagent-speedrun-switch

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: detect_cameras.py  test_openai.py
src/pokeagent_speedrun_switch/: main.py
